--- a/markup/dev/scss/base/_variables.scss
+++ b/markup/dev/scss/base/_variables.scss
@@ -83,7 +83,7 @@ $base-span-color: $orange !default;
 // p
 $base-text-color: $black !default;
 $base-text-font-size: 16px !default;
-$base-text-margin: 15px !default;
+$base-text-margin: 0 0 15px !default;
 
 // ul
 $base-lists-padding: 0px !default;
