--- a/markup/dev/scss/main.scss
+++ b/markup/dev/scss/main.scss
@@ -24,6 +24,7 @@
 @import 'components/carousel-section';
 @import 'components/send-section';
 @import 'components/prof-section';
+@import 'components/dropdown-form';
 
 
 // layouts
