--- a/markup/dev/scss/base/_buttons.scss
+++ b/markup/dev/scss/base/_buttons.scss
@@ -59,3 +59,17 @@
   }
 
 }
+
+.close-btn {
+  position: absolute;
+  right: -15px;
+  top: -15px;
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: #3b434c;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
