--- a/markup/dev/scss/base/_forms.scss
+++ b/markup/dev/scss/base/_forms.scss
@@ -6,7 +6,6 @@
     border-radius: $form-input-border-radius;
     width: $form-input-width;
     outline: none;
-    font-family: 'Lato';
     border: 1px solid transparent;
     @include animate(border-color);
 
@@ -19,6 +18,6 @@
   textarea {
     width: 100% !important;
     overflow:  auto;
-    height: 100% !important;
+    height: 200px;
     resize: none;
   }
