--- a/markup/dev/scss/components/_burger-menu.scss
+++ b/markup/dev/scss/components/_burger-menu.scss
@@ -84,9 +84,8 @@
     justify-content: center;
     align-self: center;
     z-index: 4;
-    transform: translateX(100%);
-    visibility: hidden;
     cursor: default;
+    display: none;
 
     &:after {
       content: '';
