--- a/markup/dev/scss/components/_info-section-content.scss
+++ b/markup/dev/scss/components/_info-section-content.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
+  z-index: 0;
 
   &:after {
     content: '';
