--- a/markup/dev/scss/components/_prof-section.scss
+++ b/markup/dev/scss/components/_prof-section.scss
@@ -58,7 +58,7 @@
 
   .user-info-item {
     width: 25%;
-    padding: 0 15px 15px 15px;
+    padding: 0 20px 15px 20px;
 
     a {
       text-decoration: none;
@@ -166,6 +166,12 @@
       display: block;
       border-radius: 50%;
       background-color: #fff;
+      @include animate(color);
+
+      &:hover {
+        color: $orange;
+      }
+
     }
 
     .icon-facebook {
