Fix the problem with z-index of popup and full-screen menu, update html structure

--- a/markup/dev/scss/base/_text.scss
+++ b/markup/dev/scss/base/_text.scss
@@ -6,11 +6,15 @@ p {
 p, .p {
 
   @include media("<tablet") {
-    font-size: 16px;
+    font-size: 15px;
   }
 
   @include media("<phone") {
     font-size: 14px;
   }
   
+}
+
+blockquote {
+  margin: 0 30px;
 }
