--- a/markup/dev/css/main.css
+++ b/markup/dev/css/main.css
@@ -447,8 +447,8 @@ img {
 
 .close-btn {
   position: absolute;
-  right: -15px;
-  top: -15px;
+  right: -20px;
+  top: -20px;
   display: block;
   width: 40px;
   height: 40px;
@@ -467,6 +467,11 @@ img {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center; }
+
+@media (max-width: 767px) {
+  .close-btn {
+    right: 10px;
+    top: 10px; } }
 
 input, textarea {
   padding: 10px 20px 10px 20px;
@@ -571,11 +576,14 @@ p {
 
 @media (max-width: 1023px) {
   p, .p {
-    font-size: 16px; } }
+    font-size: 15px; } }
 
 @media (max-width: 767px) {
   p, .p {
     font-size: 14px; } }
+
+blockquote {
+  margin: 0 30px; }
 
 .navigation {
   display: -webkit-box;
@@ -605,7 +613,9 @@ p {
             justify-content: center; }
     .navigation-opener-text {
       display: block;
-      padding-right: 90px; }
+      position: absolute;
+      left: -180%;
+      padding-right: 45px; }
     .navigation-opener:before {
       content: '';
       position: absolute;
@@ -634,15 +644,17 @@ p {
       transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
     .navigation-opener-line {
       display: block;
-      -webkit-transition: -webkit-transform 0.3s ease-in-out;
-      transition: -webkit-transform 0.3s ease-in-out;
-      -o-transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+      -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+      transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+      -o-transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+      transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+      transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
       position: absolute;
       width: 20px;
       height: 1px;
-      background: #fff; }
+      background: #fff;
+      opacity: 1;
+      visibility: visible; }
   .navigation:hover .navigation-opener:after {
     -webkit-transform: rotate(-45deg);
         -ms-transform: rotate(-45deg);
@@ -692,7 +704,6 @@ p {
     -webkit-align-self: center;
         -ms-flex-item-align: center;
             align-self: center;
-    z-index: 4;
     cursor: default;
     display: none; }
     .navigation .navigation-drop:after {
@@ -720,7 +731,7 @@ p {
       -webkit-flex-direction: column;
           -ms-flex-direction: column;
               flex-direction: column;
-      z-index: 4; }
+      z-index: 2; }
       .navigation .navigation-drop .drop-content .nav-menu {
         display: -webkit-box;
         display: -webkit-flex;
@@ -773,10 +784,10 @@ p {
     top: 0;
     bottom: 0;
     background-color: #444a52;
-    opacity: 0.9; }
+    opacity: 0.9;
+    z-index: -1; }
 
 .info-section-content {
-  z-index: 1;
   position: relative;
   text-align: center;
   max-width: 750px;
@@ -909,7 +920,8 @@ p {
     top: 0;
     bottom: 0;
     background-color: #444a52;
-    opacity: 0.9; }
+    opacity: 0.9;
+    z-index: -1; }
 
 .newsletter-form-wrapper {
   -webkit-box-pack: center;
@@ -918,7 +930,6 @@ p {
           justify-content: center; }
 
 .newsletter-form {
-  z-index: 1;
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
@@ -969,8 +980,6 @@ p {
           align-items: center; }
   .products-block-wrapper .content-head {
     padding-bottom: 85px; }
-    .products-block-wrapper .content-head h2 {
-      color: #333; }
   .products-block-wrapper .content-items {
     display: -webkit-box;
     display: -webkit-flex;
@@ -979,8 +988,7 @@ p {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
-    padding-bottom: 100px;
-    z-index: 0; }
+    padding-bottom: 100px; }
     .products-block-wrapper .content-items li {
       width: 33.3333%;
       padding: 15px 15px;
@@ -1010,7 +1018,6 @@ p {
         .products-block-wrapper .content-items li .item-wrapper:hover .item-description {
           opacity: 1;
           visibility: visible;
-          z-index: 2;
           -webkit-border-radius: 10px;
                   border-radius: 10px; }
       .products-block-wrapper .content-items li .item-description {
@@ -1042,11 +1049,11 @@ p {
         visibility: hidden;
         -webkit-border-radius: 10px;
                 border-radius: 10px;
-        -webkit-transition: opacity 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-        -o-transition: opacity 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-        transition: opacity 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+        cursor: pointer;
         z-index: 2;
-        cursor: pointer; }
+        -webkit-transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out, color 0.3s ease-in-out, visibility 0.3s ease-in-out;
+        -o-transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out, color 0.3s ease-in-out, visibility 0.3s ease-in-out;
+        transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out, color 0.3s ease-in-out, visibility 0.3s ease-in-out; }
         .products-block-wrapper .content-items li .item-description:after {
           content: '';
           position: absolute;
@@ -1056,9 +1063,10 @@ p {
           bottom: 0;
           background-color: #f7600e;
           opacity: 0.9;
-          z-index: -1;
           -webkit-border-radius: 10px;
-                  border-radius: 10px; }
+                  border-radius: 10px;
+          z-index: -1;
+          visibility: visible; }
         .products-block-wrapper .content-items li .item-description button {
           color: #333;
           width: 100%;
@@ -1116,13 +1124,13 @@ p {
     top: 0;
     bottom: 0;
     background-color: #444a52;
-    opacity: 0.9; }
+    opacity: 0.9;
+    z-index: -1; }
   .carousel-section .carousel-items {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    z-index: 1;
     position: relative; }
     .carousel-section .carousel-items li {
       display: -webkit-box;
@@ -1170,8 +1178,22 @@ p {
     left: 15%; }
 
 @media (max-width: 767px) {
-  .carousel-section .carousel-items li .items-description blockquote {
-    font-size: 18px; } }
+  .carousel-section .carousel-items li .items-description blockquote q {
+    font-size: 16px; }
+  .carousel-section .arrow-button {
+    display: none; } }
+
+@media (max-width: 1600px) {
+  .carousel-section .right-arrow-button {
+    right: 10%; }
+  .carousel-section .left-arrow-button {
+    left: 10%; } }
+
+@media (max-width: 1330px) {
+  .carousel-section .right-arrow-button {
+    right: 0; }
+  .carousel-section .left-arrow-button {
+    left: 0; } }
 
 .send-section {
   position: relative;
@@ -1201,14 +1223,14 @@ p {
     top: 0;
     bottom: 0;
     background-color: #444a52;
-    opacity: 0.9; }
+    opacity: 0.9;
+    z-index: -1; }
   .send-section .send-block-wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    z-index: 1;
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
@@ -1231,7 +1253,7 @@ p {
           -ms-flex-pack: justify;
               justify-content: space-between;
       max-width: 860px; }
-      .send-section .send-block-wrapper .send-form .form-row {
+      .send-section .send-block-wrapper .send-form .row {
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
@@ -1245,13 +1267,13 @@ p {
         -webkit-align-items: center;
             -ms-flex-align: center;
                 align-items: center; }
-        .send-section .send-block-wrapper .send-form .form-row:not(:last-child) {
+        .send-section .send-block-wrapper .send-form .row:not(:last-child) {
           padding-bottom: 30px; }
-        .send-section .send-block-wrapper .send-form .form-row .form-col {
+        .send-section .send-block-wrapper .send-form .row .form-row {
           width: 100%; }
-          .send-section .send-block-wrapper .send-form .form-row .form-col:not(:last-child) {
+          .send-section .send-block-wrapper .send-form .row .form-row:not(:last-child) {
             padding-right: 30px; }
-      .send-section .send-block-wrapper .send-form .form-col-lg {
+      .send-section .send-block-wrapper .send-form .form-row-lg {
         width: 100%;
         display: -webkit-box;
         display: -webkit-flex;
@@ -1281,27 +1303,20 @@ p {
   .send-section .send-block-wrapper .send-form button {
     width: 100%;
     margin-bottom: 30px; }
-  .form-row {
+  .row {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap; }
-    .form-row .form-col {
+    .row .form-row {
       width: 100%;
       padding-right: 0; }
-      .form-row .form-col:not(:last-child) {
+      .row .form-row:not(:last-child) {
         margin-bottom: 30px; }
-  .send-section .send-block-wrapper .send-form .form-row .form-col:not(:last-child) {
+  .send-section .send-block-wrapper .send-form .row .form-row:not(:last-child) {
     padding-right: 0; } }
 
 .user-inf-section {
   padding: 100px 0; }
-
-.content-head {
-  text-align: center;
-  padding-bottom: 100px;
-  max-width: 470px; }
-  .content-head h2 {
-    color: #333; }
 
 .user-inf-wrapper {
   -webkit-box-pack: center;
@@ -1367,11 +1382,11 @@ p {
               transform-origin: bottom;
       -webkit-filter: initial;
               filter: initial;
-      -webkit-transition: -webkit-filter 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-      transition: -webkit-filter 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-      -o-transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
-      transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
-      transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
+      -webkit-transition: -webkit-filter 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-transform-origin 0.3s ease-in-out;
+      transition: -webkit-filter 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-transform-origin 0.3s ease-in-out;
+      -o-transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out, transform-origin 0.3s ease-in-out;
+      transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out, transform-origin 0.3s ease-in-out;
+      transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out, transform-origin 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-transform-origin 0.3s ease-in-out, -ms-transform-origin 0.3s ease-in-out; }
       .user-inf-content .user-info-item:hover .item-image:after {
         content: '';
         width: 100%;
@@ -1380,9 +1395,9 @@ p {
         bottom: 15px;
         -webkit-border-radius: 10px;
                 border-radius: 10px;
-        -webkit-transition: border 0.3s ease-in-out, border-color 0.3s ease-in-out;
-        -o-transition: border 0.3s ease-in-out, border-color 0.3s ease-in-out;
-        transition: border 0.3s ease-in-out, border-color 0.3s ease-in-out; }
+        -webkit-transition: border 0.3s ease-in-out;
+        -o-transition: border 0.3s ease-in-out;
+        transition: border 0.3s ease-in-out; }
     .user-inf-content .user-info-item:hover .soc-icons {
       -webkit-filter: initial;
               filter: initial; }
@@ -1401,7 +1416,12 @@ p {
       padding-bottom: 15px;
       position: relative;
       -webkit-filter: grayscale(100%);
-              filter: grayscale(100%); }
+              filter: grayscale(100%);
+      -webkit-transition: -webkit-transform 0.3s ease-in-out, -webkit-transform-origin 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out;
+      transition: -webkit-transform 0.3s ease-in-out, -webkit-transform-origin 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out;
+      -o-transition: transform 0.3s ease-in-out, transform-origin 0.3s ease-in-out, filter 0.3s ease-in-out;
+      transition: transform 0.3s ease-in-out, transform-origin 0.3s ease-in-out, filter 0.3s ease-in-out;
+      transition: transform 0.3s ease-in-out, transform-origin 0.3s ease-in-out, filter 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-transform-origin 0.3s ease-in-out, -ms-transform-origin 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out; }
       .user-inf-content .user-info-item .item-image img {
         width: 100%;
         display: block; }
@@ -1429,6 +1449,94 @@ p {
       -o-transition: filter 0.3s ease-in-out, color 0.3s ease-in-out, background-color 0.3s ease-in-out;
       transition: filter 0.3s ease-in-out, color 0.3s ease-in-out, background-color 0.3s ease-in-out;
       transition: filter 0.3s ease-in-out, color 0.3s ease-in-out, background-color 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out; }
+
+@media (max-width: 1023px) {
+  .user-inf-content .user-info-item {
+    width: 50%;
+    padding: 0 15px 15px 15px; } }
+
+@media (max-width: 767px) {
+  .user-inf-content .user-info-item {
+    width: 100%;
+    padding: 0 0 15px 0; } }
+
+.popup {
+  max-width: 765px;
+  width: 100%;
+  background-color: #fff;
+  padding: 60px 100px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  position: fixed;
+  -webkit-transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  z-index: 3; }
+  .popup .content-head {
+    padding-bottom: 45px; }
+    .popup .content-head p {
+      margin-bottom: 0; }
+  .popup form {
+    width: 100%; }
+    .popup form .row .form-row {
+      margin-bottom: 30px; }
+      .popup form .row .form-row input {
+        border: 1px solid #c4c6c9; }
+        .popup form .row .form-row input:focus {
+          border-color: #f7600e; }
+    .popup form .row .form-row-lg {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      margin-bottom: 30px; }
+      .popup form .row .form-row-lg textarea {
+        border: 1px solid #c4c6c9; }
+        .popup form .row .form-row-lg textarea:focus {
+          border-color: #f7600e; }
+
+.overlay {
+  display: none; }
+  .overlay:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #444a52;
+    z-index: 2;
+    opacity: 0.9; }
+
+@media (max-width: 1023px) {
+  .popup {
+    padding: 30px 15px; } }
+
+.content-head {
+  text-align: center;
+  padding-bottom: 100px;
+  max-width: 470px; }
+  .content-head h2 {
+    color: #333; }
 
 .soc-icons {
   display: -webkit-box;
@@ -1467,72 +1575,6 @@ p {
     .soc-icons li .icon-behance {
       color: #009bd5; }
 
-@media (max-width: 1023px) {
-  .user-inf-content .user-info-item {
-    width: 50%;
-    padding: 0 15px 15px 15px; } }
-
-@media (max-width: 767px) {
-  .user-inf-content .user-info-item {
-    width: 100%;
-    padding: 0 0 15px 0; } }
-
-.dropdown-block {
-  max-width: 765px;
-  width: 100%;
-  background-color: #fff;
-  padding: 60px 100px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  position: fixed;
-  -webkit-transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  -o-transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  display: none; }
-  .dropdown-block .content-head {
-    padding-bottom: 45px; }
-    .dropdown-block .content-head p {
-      color: #333;
-      font-size: 16px;
-      margin-bottom: 0; }
-  .dropdown-block form {
-    width: 100%; }
-    .dropdown-block form .form-row .form-col {
-      margin-bottom: 30px; }
-      .dropdown-block form .form-row .form-col input {
-        border: 1px solid #c4c6c9; }
-        .dropdown-block form .form-row .form-col input:focus {
-          border-color: #f7600e; }
-    .dropdown-block form .form-row .form-col-lg {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      margin-bottom: 30px; }
-      .dropdown-block form .form-row .form-col-lg textarea {
-        border: 1px solid #c4c6c9; }
-        .dropdown-block form .form-row .form-col-lg textarea:focus {
-          border-color: #f7600e; }
-
 .wrapper {
   position: relative;
   overflow: hidden; }
@@ -1543,7 +1585,7 @@ p {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1; }
+  z-index: 2; }
   .header-wrapper {
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
@@ -1611,3 +1653,7 @@ p {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex; }
+
+.main {
+  position: relative;
+  z-index: 1; }
