--- a/markup/dev/scss/base/_buttons.scss
+++ b/markup/dev/scss/base/_buttons.scss
@@ -62,8 +62,8 @@
 
 .close-btn {
   position: absolute;
-  right: -15px;
-  top: -15px;
+  right: -20px;
+  top: -20px;
   display: block;
   width: 40px;
   height: 40px;
@@ -72,4 +72,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@include media("<phone") {
+  .close-btn {
+    right: 10px;
+    top: 10px;
+  }
+
 }
