--- a/markup/dev/scss/main.scss
+++ b/markup/dev/scss/main.scss
@@ -24,7 +24,9 @@
 @import 'components/carousel-section';
 @import 'components/send-section';
 @import 'components/prof-section';
-@import 'components/dropdown-form';
+@import 'components/popup';
+@import 'components/content-head';
+@import 'components/soc-icons';
 
 
 // layouts
@@ -32,5 +34,6 @@
 @import 'layouts/header';
 @import 'layouts/footer';
 @import 'layouts/containers';
+@import 'layouts/main';
 
 
