--- a/markup/dev/scss/base/_typography.scss
+++ b/markup/dev/scss/base/_typography.scss
@@ -78,3 +78,27 @@ a {
     color: $base-link-hover-color;
   }
 }
+
+p {
+  margin: $base-text-margin;
+}
+
+
+p, .p {
+
+  @include media("<tablet") {
+    font-size: 15px;
+  }
+
+  @include media("<phone") {
+    font-size: 14px;
+  }
+  
+}
+
+blockquote {
+  margin: 0 30px;
+  color: $white;
+  font-size: 25px;
+  font-style: italic;
+}
