--- a/markup/dev/scss/components/_carousel-section.scss
+++ b/markup/dev/scss/components/_carousel-section.scss
@@ -25,7 +25,7 @@
     position: relative;
     @extend %listreset;
 
-    & li {
+    li {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -40,11 +40,7 @@
         blockquote {
           
           q {
-            font-style: italic;
-            color: $white;
-            font-size: 25px;
             margin-bottom: 50px;
-            line-height: 1.8;
           }
 
         }
@@ -52,7 +48,6 @@
         cite {
           font-size: 18px;
           display: block;
-          color: $white;
           padding-top: 50px;
         }
 
