--- a/markup/dev/scss/components/_company-products.scss
+++ b/markup/dev/scss/components/_company-products.scss
@@ -17,9 +17,9 @@
     @extend %listreset;
 
 
-    & li {
-      width: 33.3333%;
-      padding: 15px 15px;
+    li {
+      width: (100%/3);
+      padding: 0 15px 30px;
       display: flex;
       justify-content: center;
 
@@ -60,8 +60,8 @@
         opacity: 0;
         visibility: hidden;
         border-radius: 10px;
-        cursor: pointer;
         z-index: 2;
+        color: $white;
         @include animate(background-color opacity color visibility);
 
         &:after {
@@ -78,10 +78,11 @@
           visibility: visible;
         }
 
-        button {
+        span {
           color: $black;
           width: 100%;
           background-color: $white;
+          border: 1px solid transparent;
 
 
            &:hover {
@@ -92,12 +93,10 @@
 
         h3 {
           margin: 0 0 15px;
-          color: $white;
         }
 
         p {
           margin: 0 0 50px;
-          color: $white;
         }
 
       }
