--- a/markup/dev/scss/components/_info-section-content.scss
+++ b/markup/dev/scss/components/_info-section-content.scss
@@ -28,10 +28,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  color: $white;
+  font-size: 25px;
 
   p {
-    color: #fff;
-    font-size: 25px;
     margin-bottom: 70px;
   }
 
