--- a/markup/dev/scss/base/_buttons.scss
+++ b/markup/dev/scss/base/_buttons.scss
@@ -51,11 +51,17 @@
 
   i {
     @include vertical-align-el;
+
   }
 
   &:hover {
     color: $orange;
     border-color: $orange;
+  }
+
+  &:focus {
+    color: $white;
+    border-color: $white;
   }
 
 }
