--- a/markup/dev/scss/main.scss
+++ b/markup/dev/scss/main.scss
@@ -26,6 +26,7 @@
 @import 'components/popup';
 @import 'components/content-head';
 @import 'components/soc-icons';
+@import 'components/slideshow';
 
 
 // layouts
