--- a/markup/dev/scss/base/_typography.scss
+++ b/markup/dev/scss/base/_typography.scss
@@ -17,7 +17,7 @@ h6, .h6,
   font-weight: 600;
   line-height: 1.5;
   margin: 0 0 30px;
-  color: $white;
+  color: $black;
   text-transform: $h-transform;
 
   @include media("<phone") {
