--- a/markup/dev/scss/components/_popup.scss
+++ b/markup/dev/scss/components/_popup.scss
@@ -3,14 +3,20 @@
     width: 100%;
     background-color: $white;
     padding: 60px 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     @include vertical-align-el;
-    position: fixed;
-    @include animate(transform visibility);
     z-index: 3;
-    display: none;
+    transform: translate(-50%, 500%);
+    visibility: hidden;
+    @include animate(transform visibility);
+
+    .popup-active & {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        transform: translate(-50%, -50%);
+        visibility: visible;
+    }
 
     .content-head {
         padding-bottom: 45px;
@@ -35,6 +41,7 @@
                   &:focus {
                       border-color: $orange;
                   }
+
               }
 
             }
@@ -49,6 +56,7 @@
                     &:focus {
                         border-color: $orange;
                     }
+
                 }
 
             }
@@ -65,4 +73,19 @@
         padding: 30px 15px;
     }
     
+}
+
+.popup-overlay {
+
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-color: #444a52;
+        opacity: 0.9;
+        z-index: 2;
+    }
 }
