--- a/markup/dev/scss/components/_soc-icons.scss
+++ b/markup/dev/scss/components/_soc-icons.scss
@@ -12,15 +12,19 @@
       }
   
       a {
-        text-decoration: none;
-        font-size: 30px;
         display: block;
         border-radius: 50%;
         background-color: #fff;
-        @include animate(color);
+
+        i {
+          font-size: 30px;
+          @include animate(color);
+          display: block;
   
-        &:hover {
-          color: $orange;
+          &:hover {
+            color: $orange;
+          }
+
         }
   
       }
